fix hover on mobile

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
       /*height: 7.5em;*/
     }
 
-    .container > div:hover,
+    /*.container > div:hover,*/
     .container > div.selected {
       background-color: lightskyblue;
       box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.5);
@@ -45,6 +45,15 @@ input[type=number], select {
 
 input[type=button] {
   font: inherit;
+}
+
+@media (hover: hover) {
+  .container > div:hover {
+    background-color: lightskyblue;
+    box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.5);
+    border-radius: .2em;
+  }
+
 }
 
 @media screen and (min-width: 480px) {
